Implement service methods via repo
